# sensei

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  causemos-api.yml  docker-compose.yaml  example-edges.json  example-model.json  example-nodes.json  install.sh  requirements-dev.txt  requirements.txt
.deploy/: docker-compose.yaml
.github/workflows/: deploy.yaml  docker-publish.yaml  docker.yaml  release.yaml
api/: README.md  causemos-api.yml  engine.py  logging.yaml  requirements.txt  test.py
api/examples/: example-nodes.json  example-projection.json
api/sensei/: api.py  model.py
engine/: README.md  engine.py  engine_helpers.py  pyproject.toml
engine/sensei_engine/: causemos_parsers.py  engine.py  engine_helpers.py  forecast.py  utils.py
sensei/: api.py  model.py
tdmodelapi/: api.py
tests/: compile-trigger.py  modify_edge_test.py  pytests.py  test.py
tests/expected/: test_create_model.df_cag.csv  test_create_model.df_cag_opt.csv  test_create_model.df_ts.csv  test_create_model.json  test_get_model.json
tests/inputs/: example-model.json  example-projection.json  experiment.json
tests/pam/334000c1/: model.json
tests/pam/4510547d/: model.json
tests/pam/609aed2f/: model.json  projection-clamp-2.json  projection-clamp.json
tests/pam/907/: model.json
tests/pam/b4ad9df0/: model.json
tests/pam/d51533ce/: model.json  projection.json
