[tool.poetry]
name = "sensei_engine"
version = "0.2.1"
description = "Top-down modeling engine"
authors = ["Ben Johnson <ben@jataware.com>", "Ezekiel Barnett <zeek@jataware.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
networkx = "^2.6.3"
arrow = "^1.2.1"
orbit-ml = "1.1.0"
torch = "1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
